@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.port.hu"
        name="Port.hu"
-       version="1.7.2"
+       version="1.8.0"
        provider-name="Bence Nádas (olympia)">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
-    <import addon="metadata.common.themoviedb.org" version="1.1.0"/>
+    <import addon="metadata.common.themoviedb.org" version="2.1.4"/>
     <import addon="metadata.common.movieposterdb.com" version="1.0.5"/>
-    <import addon="metadata.common.imdb.com" version="2.1.5"/>
+    <import addon="metadata.common.imdb.com" version="2.1.9"/>
     <import addon="metadata.common.impa.com" version="1.0.3"/>
     <import addon="metadata.common.hdtrailers.net" version="1.0.7"/>
   </requires>
