@@ -11,4 +11,8 @@
     <string id="30007">Filmelőzetes letöltése a HD-Trailers.net-ről</string>
     <string id="30008">Műfaj-elnevezések fordítása magyarra</string>
     <string id="30009">BOXSET elnevezések themoviedb.org-ról</string>
+    <string id="30010">Preferált borító nyelv</string>
+    <string id="30011">Borítók</string>
+    <string id="30012">Filmelőzetesek</string>
+    <string id="30013">Filmelőzetes letöltése a themoviedb.org-ról</string>
 </strings>
