@@ -1,3 +1,8 @@
+[B]1.8.0[/B]
+- added: Trailers from TMDb
+- added: Language preference for Posters
+- refactored: Settings and Set Title Scraping
+
 [B]1.7.2[/B]
 - fixed: dependency versioning
 
